Avoid squashing logo

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -93,7 +93,6 @@ main.container {
   }
   .aucrwwl {
     @media screen and (min-width: 576px) {
-      max-height: 100px;
       margin-left: auto;
       padding: 0;
     }
